--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
+    "leaflet": "^1.9.3",
     "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
