--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
     "google-map-react": "^2.2.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "mui": "^0.0.1",
     "polyfill": "^0.1.0",
     "react": "^18.2.0",
